[package]
name = "geyser-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geyser-bench"
path = "src/main.rs"

[[bin]]
name = "geyser-submit"
path = "src/bin/geyser-submit.rs"

[dependencies]
geyser-core = { path = "../geyser-core" }

tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

hdrhistogram = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
