[package]
name = "geyser-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

hdrhistogram = { workspace = true }
prometheus = { workspace = true }

tracing = { workspace = true }

ed25519-dalek = { workspace = true }
blake2 = { workspace = true }

rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bcs = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
